# starpusher

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  sdkconfig  starpusher.py
main/: CMakeLists.txt  buffered_led_strips.c  buffered_led_strips.h  buttons.c  buttons.h  color.c  color.h  common.h  device_id.c  device_id.h  indicator_led.c  indicator_led.h  led_strips.c  led_strips.h  networking.c  networking.h  peripherals.c  peripherals.h  starpusher.c  udp_protocol.c  udp_protocol.h  viz.h
main/vizualizations/: alien.c  fire.c  lasers.c  lightning.c  perlin.c  police.c  rainbow.c  sinusoidal.c  starburst.c  twinkle.c  viz.h  vizdefs.h  water.c
sim/: sim.py
starshield/v2/: BOM.csv  PickAndPlace.csv
starshield/v2/gerber/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
starshield/v3/: BOM.csv  PickAndPlace.csv
starshield/v3/gerber/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
viz/: Makefile  run.sh  viz  viz-sdl  viz-sdl.c  viz.c
