idf_component_register(
	SRCS "starpusher.c" "color.c" "buffered_led_strips.c" "networking.c" "peripherals.c" "udp_protocol.c" "vizualizations/alien.c"  "vizualizations/fire.c"  "vizualizations/lasers.c"  "vizualizations/lightning.c"  "vizualizations/perlin.c"  "vizualizations/police.c"  "vizualizations/rainbow.c"  "vizualizations/sinusoidal.c"  "vizualizations/twinkle.c"  "vizualizations/water.c"
        INCLUDE_DIRS "."
)
